Additions :

* Added MeshFaceFilterOp for pruning faces on MeshPrimitives.

* Added a ClampOp, for clamping values in ImagePrimitives.

* Added IECoreArnold::UniverseBlock, for managing AiBegin/AiEnd pairs.

Improvements :

* ClassParameters copy userData from their class instance, mirroring the ClassVectorParameter behaviour

Bug Fixes :

* IECoreRI.Renderer now gracefully ignores null values in parameter lists rather than crashing.
* IECoreMaya::ToMayaSkinClusterConverter now catches failures from MDGModifier::doIt(), calls  MDGModifier::undoIt(), and throws.

7.1.2:

Bug Fixes :

* Fixed component bound output bug in maya ProceduralHolder node

7.1.2:

Improvements :

* Added support for uniform primitive variables in IECoreRI::SXRenderer

* IECoreMaya PresetsUI LoadUI organizes the applicable presets by the path they came from

Bug fixes :

* Fixed exceptions when passing 64bit integers from python to MurmurHash.append method.

* Added "PHOTOMETRIC_MINISWHITE" to supported photometric interpretations in IECore::TIFFImageReader, so it can read 3delight's depthmap shadows.

7.1.1:

Bug Fixes :

* Fixed some bugs in the Wrapper/WrapperGarbageCollector code

7.1.0:

Additions :

* Added Alexa V3 Log C colorspace registered on for image reader and writers.

* Added support for writing Color3fVectorData primvars in IECoreRI::PTCParticleWriter

* Added DiskPrimitive

* The IECoreRI.Renderer class uses 3delight's new instance scoping mechanism

Changes :

* Removed deprecated "objectBegin", "objectEnd" and objectInstance"


7.0.0:

Additions :

* Added object filter option to IECore.CapturingRenderer, so you can select the objects you want it to output

* "Convert to Geometry" maya DAG menu option should now respect component selections - ie it only converts selected components

* Added alpha test attributes for IECoreGL::Renderer
